<resources>
    <string name="app_name">Dice&amp;Quotes</string>
    <string name="btn_txt_01">Roll the Dices</string>
    <string name="noQuotes">No Quotes yet</string>
    <string name="ViewQuotes">View Your Quotes</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample_message">Hello!</string>
    <string name="auth_failed">authentication failed.</string>
    <string name="dialog_title">Oops!!!</string>
    <string name="ok">OK</string>
    <string name="minimum_password">Password must be of more than 4 characters</string>
    <string name="logout">LOGOUT</string>

</resources>
